# vagabond

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  api.sh  dev.dockerfile  dist.docker-compose.yml  dist.dockerfile  docker-compose.yml  static  ui.sh  vagabond.toml
api/: Cargo.toml  Dockerfile  app.py  connman.dockerfile  ioc.py  socket_handler.py
api/config/: config.py  mixin.py
api/data/: __init__.py  root.py
api/dbus/: vagabond.conf.xml
api/services/: __init__.py  commands.py  process.py  service.py
api/services/dhcpd/: __init__.py  dhcpd.py
api/services/hostapd/: __init__.py  hostapd.py
api/services/interfaces/: __init__.py  base_interface.py  dhcp_interface.py  interfaces.py  static_interface.py  unmanaged_interface.py  wifi_interface.py
api/services/iptables/: __init__.py  iptables.py
api/services/iwd/: __init__.py  iwd_objects.py  manager.py
api/services/unbound/: __init__.py  unbound.py
api/services/wireguard/: __init__.py  wireguard.py
api/src/: app.rs  args.rs  macros.rs  main.rs
api/src/bus/: mod.rs
api/src/config/: dns.rs  mod.rs  network.rs  wireguard.rs
api/src/data/: websockets.rs
api/src/services/: mod.rs  process.rs  service_trait.rs
api/src/state/: events.rs  mod.rs
api/src/system/: interfaces.rs  mod.rs  network.rs  routing.rs  wireguard.rs
api/src/util/: command.rs
api/templates/: dhcpd.conf.hbs  hostapd.conf.hbs  iwd-main.conf.hbs  templates.py  udhcpd.conf  udhcpd.lan.conf.hbs  udhcpd.wlan.conf.hbs  unbound.conf.hbs  wireguard.conf.hbs
api/templates/tpl/: dhcpd.conf.j2  hostapd.conf.j2  iptables.sh.j2  sysctl.conf.j2  unbound.conf.j2  wireguard.conf.j2
v2api/: Cargo.toml  Dockerfile  connman.dockerfile  dhcpd.conf  regen_dbus.sh
v2api/dbus/: introspection.xml
v2api/src/: app.rs  macros.rs  main.rs  state.rs
v2api/src/config/: dhcp.rs  mod.rs  network.rs
v2api/src/data/: iface.rs  mod.rs  status.rs  wifi.rs
v2api/templates/: dhcpd.conf.hbs  hostapd.conf.hbs  unbound.conf.hbs
(+53 files in other folders)
