[package]
name = "vagabond"
version = "0.1.0"
edition = "2018"

[dependencies]
# Logging
log = { version="0.4" }
flexi_logger = { version="0.18" }

# Utility
anyhow = { version="1.0" }
lazy_static = { version="1.4" }
derive_more = { version="0.99" }
cidr-utils = { version="0.5", features=["serde"] }

# System
sysctl = { version="0.4" }
# libc = { version="0.2" }
nix = { version="0.21" }
iptables = { version="0.4" }

# Async
tokio = { version="1.7", features=["full"] }
async-trait = { version="0.1" }

# CLI Args
clap = { version="2.33" }
structopt = { version="0.3" }

# HTTP
tide = { version="0.16" }

# Serialization
serde = { version="1.0" }
serde_json = { version="1.0" }
toml = { version="0.5" }

# DBUS
dbus = { version="0.9", features=["futures"] }
dbus-tokio = { version="0.7" }

# Compiled templates
yarte = { version="0.15" }

[build-dependencies]
yarte = "0.15"
